<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_camera_and_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_detail_label"
        style="?android:listSeparatorTextViewStyle"/>
    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_solved_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <Button
        android:id="@+id/crime_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/time_btn"
        />



        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_suspect"
                android:id="@+id/crime_suspect"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/imageBtn_call"
                android:src="@drawable/ic_action_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"/>
        </LinearLayout>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_crime_report"
        android:id="@+id/crime_report"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_horizontal" />

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:gravity="bottom"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->
            <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/delete_btn"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/delete_btn"/>&ndash;&gt;-->



        <!--</LinearLayout>-->
</LinearLayout>